--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_BACKEND_URL="https://backend-hackathon-production.up.railway.app/api"
+VITE_BACKEND_URL="http://127.0.0.1:8000/api"
+VITE_IMAGES_URL="http://127.0.0.1:8000/"
